// Copyright 2019 Shift Cryptosecurity AG
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bbb;
// The greeting service definition.
service BitBoxBase {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Get some relevant environment data from the base
  rpc GetEnv (BaseSystemEnvRequest) returns (BaseSystemEnvResponse) {}
}

// The request message containing the client's hello request
message HelloRequest {
  string name = 1;
}

// The response message containing the server's response
message HelloReply {
  string message = 1;
}

message BaseSystemEnvRequest {
}

message BaseSystemEnvResponse {
  string Network = 1;
  string ElectrsRPCPort = 2;
}
